[gd_scene load_steps=10 format=3 uid="uid://d3jnibln5xabx"]

[ext_resource type="PackedScene" uid="uid://b6hiogmqth46u" path="res://GumballSpawn.tscn" id="1_l6wev"]
[ext_resource type="Script" path="res://Playing.gd" id="1_mgp3s"]
[ext_resource type="PackedScene" uid="uid://dxgvsuidc48tj" path="res://Gumball.tscn" id="2_fodow"]
[ext_resource type="PackedScene" uid="uid://bbte7gcd1q0a8" path="res://DrawScreen.tscn" id="3_kxsug"]
[ext_resource type="PackedScene" uid="uid://036l2dqcv1v2" path="res://GumballFinish.tscn" id="3_mmfsp"]
[ext_resource type="PackedScene" uid="uid://b8l33jik3bclu" path="res://RigidLine.tscn" id="4_vhmmj"]
[ext_resource type="Script" path="res://LineLoader.gd" id="5_xj4yj"]
[ext_resource type="PackedScene" uid="uid://b1yk5e0x4q2so" path="res://StaticLine.tscn" id="6_cq3j8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(2000, 10)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mgp3s")

[node name="GumballSpawn" parent="." instance=ExtResource("1_l6wev")]
position = Vector2(241, 196)
editorMode = false
gumballScene = ExtResource("2_fodow")

[node name="GumballFinish" parent="." instance=ExtResource("3_mmfsp")]
position = Vector2(786, 426)

[node name="LineLoader" parent="." instance=ExtResource("3_kxsug")]
script = ExtResource("5_xj4yj")
LineScene = ExtResource("6_cq3j8")

[node name="DrawScreen" parent="." instance=ExtResource("3_kxsug")]
LineScene = ExtResource("4_vhmmj")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(555, 557)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("1")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -997.0
offset_top = -17.0
offset_right = 1003.0
offset_bottom = 23.0
color = Color(0.419608, 0.494118, 0.960784, 1)
